# insightsviz

./: .gitignore  README.md  deploy.sh  pyproject.toml  pythonanywhere_wsgi.py  requirements.txt
src/insightsvisualization/: __init__.py  manage.py
src/insightsvisualization/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/insightsvisualization/articles/: admin.py  apps.py  models.py  urls.py  views.py
src/insightsvisualization/articles/migrations/: 0001_initial.py
src/insightsvisualization/blog/: admin.py  apps.py  models.py  views.py
src/insightsvisualization/blog/migrations/: 0001_initial.py
src/insightsvisualization/core/: admin.py  apps.py  models.py  views.py
src/insightsvisualization/core/migrations/: 0001_initial.py
src/insightsvisualization/notebooks/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
src/insightsvisualization/notebooks/migrations/: 0001_initial.py
src/insightsvisualization/static/css/: style.css
src/insightsvisualization/templates/: base.html
src/insightsvisualization/templates/accounts/: login.html  password_change.html  password_change_done.html  signup.html
src/insightsvisualization/templates/articles/: article_detail.html  article_list.html
src/insightsvisualization/templates/blog/: post_detail.html  post_list.html
src/insightsvisualization/templates/core/: about.html  home.html
src/insightsvisualization/templates/notebooks/: notebook_detail.html  notebook_list.html
src/insightsvisualization/website/: asgi.py  settings.py  urls.py  wsgi.py
