[project]
name = "insightsvisualization"
version = "0.1.0"
description = "Data visualization platform with Jupyter notebooks, articles, and blog — built with Django"
readme = "README.md"
authors = [
    { name = "Andy Miles", email = "arrivingskillsai@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.11",
    "Pillow>=10.0.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.8.0",
]

[project.scripts]
insightsvisualization = "insightsvisualization:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
